Add some more details to runwithmax page

--- a/runwithmax.html
+++ b/runwithmax.html
@@ -49,6 +49,13 @@
 							<li>Keep feature set minimal</li>
 							<li>Proof of concept with React Native and Django</li>
 						</ul>
+						<h2>Results</h2>
+						<ul>
+							<li>I completed a working prototype</li>
+							<li>I learned a ton about JavaScript, React, and the Django REST Framework</li>
+							<li>A few of us used the app for about 6 months until track season ended</li>
+							<li>I had fun in the process</li>
+						</ul>
 					</div>
 					<p>I built this app during the summer of 2020.
 						It is designed as a tool to help the MRun Sprinters keep track of their workouts and provide
@@ -61,6 +68,8 @@
 						I built the back end server using <a href="https://www.djangoproject.com/" target="_blank"
 							rel="noopener noreferrer">Django</a> and the front end was built using <a
 							href="https://reactnative.dev/" target="_blank" rel="noopener noreferrer">React Native</a>.
+						The biggest takeaway from this experiment was that marketing is important. Even if you make a
+						great app, if you don't market it to the right audience, it will not necessarily have any users.
 					</p>
 				</div>
 				<h2>Screenshots</h2>
@@ -77,7 +86,7 @@
 				<div class="row gtr-uniform">
 					<div class="col-3">
 						<p>Activity Screen - This is where you can view a feed
-                        of everyone's workouts. You can create activities from anywhere workouts can be found.</p>
+							of everyone's workouts. You can create activities from anywhere workouts can be found.</p>
 					</div>
 					<div class="col-3">
 						<p>Workouts Screen - This is where you can view workouts that have already been created by
